--- a/SOK.Web/Views/Shared/_LayoutPublic.cshtml
+++ b/SOK.Web/Views/Shared/_LayoutPublic.cshtml
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body class="bg-base-100">
-    <div class="min-h-screen w-full flex flex-col items-center justify-start p-6">
+    <div class="min-h-screen w-full flex flex-col items-center justify-start">
         @RenderBody()
     </div>
 
