--- a/SOK.Web/Views/VisitControl/Index.cshtml
+++ b/SOK.Web/Views/VisitControl/Index.cshtml
@@ -102,7 +102,7 @@
                 <div class="divider gap-1">
                     <i class="bi bi-chevron-double-down me-2"></i> 
                     <i class="bi bi-building"></i> 
-                    {{ group.streetName }} {{ group.buildingNumber }}{{ group.buildingLetter || '' }} 
+                    {{ group.streetName }} {{ group.buildingNumber }}
                     <i class="bi bi-chevron-double-down ms-2"></i>
                 </div>
 
@@ -133,7 +133,7 @@
                             <div class="flex-1">
                                 <!-- Adres -->
                                 <h2 class="card-title text-lg z-10">
-                                    {{ visit.StreetName }} {{ visit.BuildingNumber }}{{ visit.BuildingLetter || '' }}
+                                    {{ visit.StreetName }} {{ visit.BuildingNumber }}
                                     m. {{ visit.ApartmentNumber }}{{ visit.ApartmentLetter || '' }}
                                 </h2>
 
@@ -207,7 +207,7 @@
     </div>
 
     <!-- Panel kontroli - dolny pasek (tylko gdy kolęda rozpoczęta i jest następna wizyta) -->
-    <div v-if="visitStarted && nextVisitId" id="visit-controls-panel"
+    <div v-if="canStart && visitStarted && nextVisitId" id="visit-controls-panel"
         class="fixed bottom-0 left-0 right-0 bg-base-200 border-t border-base-300 z-50">
         <div class="container mx-auto px-4 py-3">
             <!-- Licznik osób -->
