Poprawki obliczania czasu
Poprawiono algorytm aby używał odpowiedniego timezona i dodatko oznaczenie użycia algorytmu dynamicznego w panelu zgłoszenia.

--- a/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
+++ b/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
@@ -159,11 +159,17 @@
                                                 <i class="bi bi-clock"></i>
                                                 Przewidywana godzina: 
                                             </div>
-                                            <div class="stat-value text-2xl">
+                                            <div class="stat-value text-2xl mt-2 @(Model.Visit.IsDynamicTimeRange ? "text-warning" : "")">
                                                 @Model.Visit.EstimatedTime.Value.ToString("HH:mm")
                                                 -
                                                 @Model.Visit.EstimatedTimeEnd.Value.ToString("HH:mm")
                                             </div>
+                                            @if (Model.Visit.IsDynamicTimeRange)
+                                            {
+                                                <div class="stat-desc text-warning">
+                                                    (aktualizowana na bieżąco)
+                                                </div>
+                                            }
                                         }
                                     </div>
                                 </div>
