Poprawka wielkości dropdowna

--- a/SOK.Web/Views/VisitControl/Index.cshtml
+++ b/SOK.Web/Views/VisitControl/Index.cshtml
@@ -35,7 +35,7 @@
                     <label tabindex="0" class="btn btn-lg btn-ghost btn-circle">
                         <i class="bi bi-three-dots-vertical text-2xl"></i>
                     </label>
-                    <ul tabindex="0" class="dropdown-content menu p-2 shadow-lg bg-base-100 rounded-box w-52 mt-2">
+                    <ul tabindex="0" class="dropdown-content menu p-2 shadow-lg bg-base-100 rounded-box text-lg w-60 mt-2">
                         <li>
                             <a @@click="toggleTheme"><i class="bi bi-palette"></i> Zmień motyw</a>
                         </li>
