Dodano obsługę wycofywania zgłoszeń

--- a/SOK.Web/Views/PublicForm/New.cshtml
+++ b/SOK.Web/Views/PublicForm/New.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Zgłoszenie kolędy";
     Layout = "_LayoutPublic";
 }
-<div id="public-form-app" class="w-full max-w-3xl">
+<div id="public-form-app" class="w-full max-w-3xl p-4 mx-auto">
     <!-- Nagłówek z informacjami o parafii -->
     <div class="bg-base-300 rounded-lg p-6 mb-6 shadow-md text-center text-lg">
         <h3 class="opacity-70">Formularz zgłoszeniowy</h3>
