--- a/SOK.Web/Views/PublicForm/PlanError.cshtml
+++ b/SOK.Web/Views/PublicForm/PlanError.cshtml
@@ -3,7 +3,7 @@
     Layout = "_LayoutPublic";
 }
 
-<div class="w-full max-w-2xl text-center">
+<div class="w-full max-w-2xl text-center p-4 mx-auto">
     <!-- Ikona błędu -->
     <div class="mb-8 text-4xl text-error">
         <i class="bi bi-exclamation-triangle"></i>
