--- a/SOK.Web/Views/PublicForm/Success.cshtml
+++ b/SOK.Web/Views/PublicForm/Success.cshtml
@@ -3,7 +3,7 @@
     Layout = "_LayoutPublic";
 }
 
-<div id="success-message-container" class="w-full max-w-2xl text-center">
+<div id="success-message-container" class="w-full max-w-2xl text-center p-4 mx-auto">
     <!-- Ikona sukcesu -->
     <div class="mb-8 text-4xl text-success">
         <i class="bi bi-check-circle"></i>
